MDEV-11777 REGEXP_REPLACE converts utf8mb4 supplementary characters to '?'

use utf8mb4 with PCRE2, not utf8mb3